Phaclon框架搭建-监听调整

--- a/app/views/user/index.phtml
+++ b/app/views/user/index.phtml
@@ -6,10 +6,11 @@
 
 <div class="page-header">
     <h1>
-        Search user
+        用户中心-查询用户
     </h1>
     <p>
-        <?php echo $this->tag->linkTo(["user/new", "Create user"]) ?>
+        <?php echo $this->tag->linkTo(["user/new", "新增用户"]) ?>
+        <?php echo $this->tag->linkTo(["index/userCancellation", "用户注销"]) ?>
     </p>
 </div>
 
