--- a/app/views/user/index.phtml
+++ b/app/views/user/index.phtml
@@ -6,11 +6,10 @@
 
 <div class="page-header">
     <h1>
-        用户中心-查询用户
+        Search user
     </h1>
     <p>
-        <?php echo $this->tag->linkTo(["user/new", "新增用户"]) ?>
-        <?php echo $this->tag->linkTo(["index/userCancellation", "用户注销"]) ?>
+        <?php echo $this->tag->linkTo(["user/new", "Create user"]) ?>
     </p>
 </div>
 
@@ -54,12 +53,12 @@
     </div>
 </div>
 
-<div class="form-group">
+<!--<div class="form-group">
     <label for="fieldPassword" class="col-sm-2 control-label">Password</label>
     <div class="col-sm-10">
-        <?php echo $this->tag->textField(["password", "size" => 30, "class" => "form-control", "id" => "fieldPassword"]) ?>
+        <?php /*echo $this->tag->textField(["password", "size" => 30, "class" => "form-control", "id" => "fieldPassword"]) */?>
     </div>
-</div>
+</div>-->
 
 <div class="form-group">
     <label for="fieldEmail" class="col-sm-2 control-label">Email</label>
