--- a/app/views/userFiles/saveFileByUser.phtml
+++ b/app/views/userFiles/saveFileByUser.phtml
@@ -20,51 +20,65 @@
 <?php echo $this->getContent(); ?>
 
 <div class="form-group">
+    <div class="row">
     <label for="Name" class="col-sm-2 control-label">文件名称</label>
     <div class="col-sm-10">
         <?php echo $this->tag->textField(["Name", "type" => "number", "class" => "form-control", "id" => "Name","readonly"=>"readonly"]) ?>
     </div>
+    </div>
 </div>
 
 <div class="form-group">
+    <div class="row">
     <label for="TempName" class="col-sm-2 control-label">临时文件名称</label>
     <div class="col-sm-10">
         <?php echo $this->tag->textField(["TempName", "type" => "number", "class" => "form-control", "id" => "TempName","readonly"=>"readonly"]) ?>
     </div>
+    </div>
 </div>
 
 <div class="form-group">
+    <div class="row">
     <label for="filSize" class="col-sm-2 control-label">文件大小</label>
     <div class="col-sm-10">
         <?php echo $this->tag->textField(["filSize", "type" => "number", "class" => "form-control", "id" => "filSize","readonly"=>"readonly"]) ?>
     </div>
+    </div>
 </div>
 
 <div class="form-group">
+    <div class="row">
     <label for="fileType" class="col-sm-2 control-label">文件类型</label>
     <div class="col-sm-10">
         <?php echo $this->tag->textField(["fileType", "type" => "number", "class" => "form-control", "id" => "fileType","readonly"=>"readonly"]) ?>
     </div>
+    </div>
 </div>
 
 <div class="form-group">
+    <div class="row">
     <label for="fileError" class="col-sm-2 control-label">文件错误</label>
     <div class="col-sm-10">
         <?php echo $this->tag->textField(["fileError", "type" => "number", "class" => "form-control", "id" => "fileError","readonly"=>"readonly"]) ?>
     </div>
-</div>
-
-<div class="form-group">
-    <label for="fileKey" class="col-sm-2 control-label">上传表控件名</label>
-    <div class="col-sm-10">
-        <?php echo $this->tag->textField(["fileKey", "type" => "number", "class" => "form-control", "id" => "fileKey","readonly"=>"readonly"]) ?>
     </div>
 </div>
 
 <div class="form-group">
+    <div class="row">
+    <label for="fileKey" class="col-sm-2 control-label">上传表控件名</label>
+    <div class="col-sm-10">
+        <?php echo $this->tag->textField(["fileKey", "type" => "number", "class" => "form-control", "id" => "fileKey","readonly"=>"readonly"]) ?>
+    </div>
+    </div>
+</div>
+
+<div class="form-group">
+    <div class="row">
     <label for="fileExtension" class="col-sm-2 control-label">文件后綴</label>
     <div class="col-sm-10">
         <?php echo $this->tag->textField(["fileExtension", "type" => "number", "class" => "form-control", "id" => "fileExtension","readonly"=>"readonly"]) ?>
+    </div>
     </div>
 </div>
 
