Phaclon框架搭建-缓存

--- a/app/views/user/index.phtml
+++ b/app/views/user/index.phtml
@@ -6,7 +6,7 @@
 
 <div class="page-header">
     <h1>
-        Search user
+        查找用户
     </h1>
     <p>
         <?php echo $this->tag->linkTo(["user/new", "Create user"]) ?>
