Phaclon框架搭建-加密与SQL例子

--- a/app/views/user/index.phtml
+++ b/app/views/user/index.phtml
@@ -9,7 +9,8 @@
         查找用户
     </h1>
     <p>
-        <?php echo $this->tag->linkTo(["user/new", "Create user"]) ?>
+        <?php echo $this->tag->linkTo(["user/new", "新增用户"]) ?>
+        <?php echo $this->tag->linkTo(["index/userCancellation", "注销用户"]) ?>
     </p>
 </div>
 
