Phaclon框架搭建-架构调整

--- a/app/views/user/index.phtml
+++ b/app/views/user/index.phtml
@@ -71,7 +71,7 @@
 
 <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-        <?php echo $this->tag->submitButton(["Search", "class" => "btn btn-default"]) ?>
+        <?php echo $this->tag->submitButton(["查找", "class" => "btn btn-default"]) ?>
     </div>
 </div>
 
