--- a/app/views/index/index.phtml
+++ b/app/views/index/index.phtml
@@ -26,7 +26,7 @@
 
     <div class="row">
         <div class="col-sm-12">
-            <?php echo Phalcon\Tag::submitButton("Login"); ?>
+            <?php echo Phalcon\Tag::submitButton("登陆"); ?>
         </div>
     </div>
 </form>
